# unittest

./: README.md  config_parsing.py  invoice_service.py  order_service.py  payment_router.py  pyproject.toml  run_full_cycle.py  run_tests.py  test.py  test_config_parsing.py
# app/: user_profile.py
# tests/: test_user_profile_contracts.py  test_user_profile_slow.py
01 Модуль 1. База- что и зачем тестируем/: 1.1 Unit-тест и «юнит»- определяем границы (функция-метод-класс), что считаем единицей проверки.md  1.2 Термины unittest- test case, fixture, suite, runner — единый словарь фреймворка.md  1.3 Принцип независимости тестов- каждый тест запускается отдельно и в любом порядке.md  1.4 Структура проекта под тесты- раскладка кода-тестов для стабильного discovery и предсказуемых импортов.md  1.5 Практика- «скелет» репозитория + минимальный тест по циклу «красный -- зелёный».md
02 Модуль 2. TestCase- читаемые и надёжные проверки/: 2.1 Шаблон AAA (Arrange-Act-Assert) в unittest.md  2.3 Проверка исключений через assertRaises (без try-except в тесте).md  (+3 more)
app/: client.py  (+4 more)
qa-branches-homework/: pyproject.toml
qa-branches-homework/src/netutils/: __init__.py  _init_.py  ports.py
qa-branches-homework/src/netutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qa-branches-homework/tests/: _init_.py  test_port.py  test_ports.py
qa-unittest-homework/: pyproject.toml  run_tests.py
qa-unittest-homework/src/qa_unittest_homework.egg-info/: PKG-INFO  SOURCES.txt
qa-unittest-homework/src/qautils/: _init_.py  slugify.py
qa-unittest-homework/tests/: _init_.py  test_slugify.py
(+231 files in other folders)
