[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-unittest-homework"
version = "0.1.0"
description = "Homework project for unittest practice"
authors = [{name = "Student"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]